# MakarovMikhailAkos2018

./: CMakeLists.txt  README.md
cpu/: commands.h  compiler.cpp  compiler.h  main.cpp  parser.h  registers.h  runner.cpp  tests.cpp
cpu/test_programs/: fib.txt  square_solver.txt
langx/: arithmetic.h  code.tex  compiler.cpp  grammar_generated.h  parser.h  tests.cpp  token.h
langx/test_programs/: quad.tex
list/: list.h
onegin/: doxygen.config  main.cpp  main.h  tests.cpp
square_solver/: doxygen.config  main.cpp  main.h  mytest.h  tests.cpp
stack/: main.cpp  main.h  stack.cpp  stack.h  tests.cpp
trees/: dump.cpp  tests.cpp  trees.h
